simplify scoring
